[project]
name = "cs-552-generative-ai-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "torch>=2.9.1",
    "torchmetrics[image]>=1.8.2",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
